// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to ignore rule internal-resolution-error 1`] = `
[
  "[arethetypeswrong] test-internal-resolution-error v0.0.0

 (ignoring rules: 'internal-resolution-error')

 No problems found 🌟
┌───────────────────┬──────────────────────────────────┐
│                   │ "test-internal-resolution-error" │
├───────────────────┼──────────────────────────────────┤
│ node10            │ 🟢                               │
├───────────────────┼──────────────────────────────────┤
│ node16 (from CJS) │ 🟢 (CJS)                         │
├───────────────────┼──────────────────────────────────┤
│ node16 (from ESM) │ 🟢 (ESM)                         │
├───────────────────┼──────────────────────────────────┤
│ bundler           │ 🟢                               │
└───────────────────┴──────────────────────────────────┘",
]
`;

exports[`should throw when have internal resolution error 2`] = `
[
  "[arethetypeswrong] test-internal-resolution-error v0.0.0

🥴 Import found in a type declaration file failed to resolve. Either this indicates that runtime resolution errors will occur, or (more likely) the types misrepresent the contents of the JavaScript files. Use -f json to see the imports that failed to resolve. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/InternalResolutionError.md


┌───────────────────┬──────────────────────────────────┐
│                   │ "test-internal-resolution-error" │
├───────────────────┼──────────────────────────────────┤
│ node10            │ 🟢                               │
├───────────────────┼──────────────────────────────────┤
│ node16 (from CJS) │ 🟢 (CJS)                         │
├───────────────────┼──────────────────────────────────┤
│ node16 (from ESM) │ 🥴 Internal resolution error     │
├───────────────────┼──────────────────────────────────┤
│ bundler           │ 🟢                               │
└───────────────────┴──────────────────────────────────┘",
]
`;
